src/objects/Incident_Report__c.object
<CustomObject>
    <fields>
        <fullName>Affected_Data_Centers__c</fullName>
        <label>Affected Data Centers</label>
        <picklist>
            <picklistValues>
                <fullName>US1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDN</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Chat_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Chat Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Comments Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_to_Resolution__c</fullName>
        <label>Estimated Time to Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>15 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feed_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Feed Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gamification_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Gamification Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identity_Store_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Identity Store Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Login_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Login Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Affected_Accounts__c</fullName>
        <label>Number of Affected Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Affected_Contacts__c</fullName>
        <label>Number of Affected Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RaaS_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>RaaS Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>P0 - Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1 - Interruption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - Degradation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Degradation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Share Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webhooks_Failure_Rate__c</fullName>
        <globalPicklist>Failure_Rates</globalPicklist>
        <label>Webhooks Failure Rate</label>
        <type>Picklist</type>
    </fields>
    <label>Incident Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Affected_Data_Centers_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Affected_Data_Centers__c )</errorConditionFormula>
        <errorDisplayField>Affected_Data_Centers__c</errorDisplayField>
        <errorMessage>Must Select Affected Data Centers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Time_Required_on_Resolved</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
AND(ISPICKVAL( Status__c , &apos;Open&apos;), NOT(ISNULL( End_Time__c ))) ,
AND(ISPICKVAL( Status__c , &apos;Resolved&apos;), ISNULL( End_Time__c )), AND(ISPICKVAL( Status__c , &apos;Closed&apos;) , ISNULL( End_Time__c )))</errorConditionFormula>
        <errorDisplayField>Affected_Data_Centers__c</errorDisplayField>
        <errorMessage>Check that Incident&apos;s Status and End Time match process</errorMessage>
    </validationRules>
</CustomObject>